[package]
name = "bliss"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
url = "2.4.0"
rpassword = "0.0.4"
reqwest = { version = "~0.11.18", features = ["json"] }
lemmy_api_common = "=0.18.1-rc.9"
tokio = { version = "~1", features = ["full"] }
serde = "1.0.171"
serde_yaml = "0.9.22"
chrono = "0.4.26"
home = "0.5.5"
thiserror = "1.0.43"
