[package]
name = "bliss"
version = "0.2.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.3.11", features = ["derive"] }
url = "2.4.0"
rpassword = "0.0.4"
reqwest = { version = "~0.11.18", features = ["json", "multipart"] }
lemmy_api_common = "=0.18.1-rc.9"
tokio = { version = "~1", features = ["full"] }
serde = "1.0.171"
serde_yaml = "0.9.22"
serde_json = "1.0.104"
chrono = "0.4.26"
home = "0.5.5"
thiserror = "1.0.43"
pretty_logger = "0.1.8"
log = "0.3.8"
image = "0.24.6"
bytes = "1.1.0"
